--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lzutf8": "^0.6.3",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
