--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.3",
+    "@types/react": "18.2.15",
+    "typescript": "5.1.6"
   }
 }
