--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@mantine/core": "^6.0.17",
+    "@mantine/form": "^7.1.2",
     "@mantine/hooks": "^6.0.17",
     "@mantine/next": "^6.0.17",
     "next": "latest",
