updated redirects for firebase

--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
         "destination": "/index.html"
       },
       {
-        "regex": "/apps",
+        "source": "/apps",
         "destination": "/apps.html"
       } 
     ]
