--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "devDependencies": {
     "@types/node": "20.4.3",
     "@types/react": "18.2.15",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.1.6"
   }
 }
