--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "stylelint-fix": "^2.2.6"
   }
 }
