fix masjid management

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@iconify/react": "^5.0.2",
         "@tanstack/react-table": "^8.20.5",
         "@tsparticles/react": "^3.0.0",
+        "adhan": "^4.4.3",
         "atropos": "^2.0.2",
         "axios": "^1.11.0",
         "bootstrap": "^5.3.7",
         "formik": "^2.4.6",
         "isotope-layout": "^3.0.6",
         "leaflet": "^1.9.4",
+        "moment": "^2.30.1",
         "next": "^14.2.30",
         "next-auth": "^4.24.11",
         "nextjs-progressbar": "^0.0.16",
