--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bootstrap": "^5.3.7",
         "formik": "^2.4.6",
         "isotope-layout": "^3.0.6",
+        "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
         "moment": "^2.30.1",
         "next": "^14.2.30",
