--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "isotope-layout": "^3.0.6",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
+        "libphonenumber-js": "^1.12.10",
         "moment": "^2.30.1",
         "next": "^14.2.30",
         "next-auth": "^4.24.11",
@@ -37,6 +38,7 @@
         "react-hook-form": "^7.53.0",
         "react-leaflet": "^4.2.1",
         "react-modal-video": "^2.0.1",
+        "react-phone-input-2": "^2.15.1",
         "react-responsive-masonry": "^2.2.0",
         "react-scroll-trigger": "^0.6.14",
         "react-tabs": "^6.0.2",
