add events feature

--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@fullcalendar/core": "^6.1.15",
-        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/bootstrap": "^6.1.19",
+        "@fullcalendar/core": "^6.1.19",
+        "@fullcalendar/daygrid": "^6.1.19",
+        "@fullcalendar/interaction": "^6.1.19",
+        "@fullcalendar/list": "^6.1.19",
+        "@fullcalendar/react": "^6.1.19",
+        "@fullcalendar/timegrid": "^6.1.19",
         "@hello-pangea/dnd": "^16.6.0",
+        "@hookform/resolvers": "^3.10.0",
         "@iconify/react": "^5.0.2",
         "@tanstack/react-table": "^8.20.5",
         "@tsparticles/react": "^3.0.0",
@@ -41,6 +47,7 @@
         "react-phone-input-2": "^2.15.1",
         "react-responsive-masonry": "^2.2.0",
         "react-scroll-trigger": "^0.6.14",
+        "react-select": "^5.10.2",
         "react-tabs": "^6.0.2",
         "react-visibility-sensor": "^5.1.1",
         "sass": "^1.77.8",
